modulairzed index.html

--- a/index.html
+++ b/index.html
@@ -7,124 +7,36 @@
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 2em;
-      background: #fafbfc;
-    }
+    body { font-family: Arial, sans-serif; margin: 2em; background: #fafbfc; }
     h1 { font-size: 2rem; margin-bottom: 0.5em; }
     .summary { margin-top: 1em; margin-bottom: 1em; }
     .summary span { display: inline-block; min-width: 180px; margin-bottom: 0.5em; }
-    .charts {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 40px;
-      align-items: flex-end;
-      margin-top: 2em;
-    }
-    .chart-container {
-      min-width: 320px;
-      flex: 1 1 320px;
-    }
-    .filters {
-      margin: 1.5em 0 1.5em 0;
-      padding: 1em;
-      background: #f7f7f7;
-      border-radius: 8px;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1em;
-      align-items: center;
-    }
+    .charts { display: flex; flex-wrap: wrap; gap: 40px; align-items: flex-end; margin-top: 2em; }
+    .chart-container { min-width: 320px; flex: 1 1 320px; }
+    .filters { margin: 1.5em 0 1.5em 0; padding: 1em; background: #f7f7f7; border-radius: 8px; display: flex; flex-wrap: wrap; gap: 1em; align-items: center; }
     .filters label { font-weight: bold; margin-right: 0.5em; }
-    .filters select, .filters input[type="date"] {
-      padding: 6px 12px;
-      font-size: 1em;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-    }
+    .filters select, .filters input[type="date"] { padding: 6px 12px; font-size: 1em; border-radius: 4px; border: 1px solid #ccc; }
     .filters button { padding: 6px 12px; border-radius: 4px; border: none; background: #4e79a7; color: #fff; font-weight: bold; }
-    #csv-table {
-      max-width: 100%;
-      overflow-x: auto;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.03);
-      margin-bottom: 2em;
-    }
-    table {
-      border-collapse: collapse;
-      margin-top: 1em;
-      min-width: 600px;
-      width: 100%;
-      font-size: 1em;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 8px 10px;
-      text-align: left;
-      max-width: 220px;
-      word-break: break-word;
-    }
-    th {
-      background: #f0f0f0;
-      font-size: 1em;
-    }
-    .cat-edit-select {
-      min-width: 120px;
-      padding: 5px 8px;
-      border-radius: 4px;
-      border: 1px solid #bbb;
-      font-size: 1em;
-    }
-    input[type="file"] {
-      font-size: 1em;
-      margin-bottom: 1em;
-    }
+    #csv-table { max-width: 100%; overflow-x: auto; background: #fff; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.03); margin-bottom: 2em; }
+    table { border-collapse: collapse; margin-top: 1em; min-width: 600px; width: 100%; font-size: 1em; }
+    th, td { border: 1px solid #ccc; padding: 8px 10px; text-align: left; max-width: 220px; word-break: break-word; }
+    th { background: #f0f0f0; font-size: 1em; }
+    .cat-edit-select { min-width: 120px; padding: 5px 8px; border-radius: 4px; border: 1px solid #bbb; font-size: 1em; }
+    input[type="file"] { font-size: 1em; margin-bottom: 1em; }
     @media (max-width: 900px) {
-      .charts {
-        flex-direction: column;
-        gap: 20px;
-      }
-      .chart-container {
-        min-width: 0;
-        width: 100%;
-      }
-      table {
-        min-width: 450px;
-        font-size: 0.95em;
-      }
+      .charts { flex-direction: column; gap: 20px; }
+      .chart-container { min-width: 0; width: 100%; }
+      table { min-width: 450px; font-size: 0.95em; }
     }
     @media (max-width: 600px) {
-      body {
-        margin: 0.7em;
-      }
+      body { margin: 0.7em; }
       h1 { font-size: 1.4rem; }
-      .charts, .filters {
-        flex-direction: column;
-        gap: 10px;
-        align-items: stretch;
-      }
-      .summary span {
-        display: block;
-        min-width: 0;
-        font-size: 0.97em;
-      }
-      table {
-        min-width: 350px;
-        font-size: 0.9em;
-      }
-      th, td {
-        padding: 5px 6px;
-      }
-      .filters label, .filters select, .filters input, .filters button {
-        font-size: 0.96em;
-      }
-      .cat-edit-select {
-        min-width: 90px;
-        font-size: 0.97em;
-        padding: 3px 4px;
-      }
+      .charts, .filters { flex-direction: column; gap: 10px; align-items: stretch; }
+      .summary span { display: block; min-width: 0; font-size: 0.97em; }
+      table { min-width: 350px; font-size: 0.9em; }
+      th, td { padding: 5px 6px; }
+      .filters label, .filters select, .filters input, .filters button { font-size: 0.96em; }
+      .cat-edit-select { min-width: 90px; font-size: 0.97em; padding: 3px 4px; }
     }
   </style>
 </head>
@@ -155,296 +67,6 @@
     </div>
   </div>
   <div id="csv-table"></div>
-  <script>
-    // --- Category mapping and utilities ---
-    const DEFAULT_CATEGORIES = [
-      "Food & Drink", "Shopping", "Transport", "Entertainment", "Rent", "Utilities",
-      "Insurance", "Income", "Medical", "Cash", "Bank Transfer", "Other"
-    ];
-    function getCustomCategoryMap() {
-      try {
-        return JSON.parse(localStorage.getItem('customCategoryMap') || '{}');
-      } catch { return {}; }
-    }
-    function setCustomCategoryMap(map) {
-      localStorage.setItem('customCategoryMap', JSON.stringify(map));
-    }
-    function getCategoryForDesc(desc) {
-      const map = getCustomCategoryMap();
-      return map[desc] || null;
-    }
-    function setCategoryForDesc(desc, category) {
-      const map = getCustomCategoryMap();
-      map[desc] = category;
-      setCustomCategoryMap(map);
-    }
-    function categorize(desc) {
-      // Use custom category if available
-      if (!desc) return "Other";
-      const custom = getCategoryForDesc(desc);
-      if (custom) return custom;
-      // Default keyword rules
-      const d = desc.toLowerCase();
-      if (/starbucks|coffee|cafe|restaurant|food|eat|drink|dining/.test(d)) return "Food & Drink";
-      if (/amazon|shopping|store|mall|target|walmart/.test(d)) return "Shopping";
-      if (/uber|lyft|taxi|transport|bus|train|transit|metro|flight|airlines|airline/.test(d)) return "Transport";
-      if (/netflix|hulu|prime|entertainment|movie|cinema|spotify/.test(d)) return "Entertainment";
-      if (/rent|lease|apartment|housing/.test(d)) return "Rent";
-      if (/utility|electric|water|gas|internet|phone|cable/.test(d)) return "Utilities";
-      if (/insurance/.test(d)) return "Insurance";
-      if (/salary|payroll|paycheck|income|deposit/.test(d)) return "Income";
-      if (/medical|health|doctor|hospital|pharmacy/.test(d)) return "Medical";
-      if (/atm|cash/.test(d)) return "Cash";
-      if (/bank|transfer/.test(d)) return "Bank Transfer";
-      return "Other";
-    }
-function guessAmount(row) {
-  // Get the raw amount string
-  let amountValue = null;
-  for (const key of Object.keys(row)) {
-    if (key.toLowerCase().includes('amount')) {
-      amountValue = row[key];
-      break;
-    }
-  }
-  if (!amountValue) return 0;
-
-  let amtStr = (amountValue + '').replace(/[\$,]/g, '').trim();
-
-  // If in parentheses, it's negative
-  if (/^\(\s*[\d\.]+\s*\)$/.test(amtStr)) {
-    amtStr = '-' + amtStr.replace(/[()\s]/g, '');
-  }
-  // If in parentheses with cents, e.g. ($200.00)
-  if (amtStr.startsWith('(') && amtStr.endsWith(')')) {
-    amtStr = '-' + amtStr.substring(1, amtStr.length - 1);
-  }
-
-  // Remove any stray spaces again
-  amtStr = amtStr.replace(/\s/g, '');
-
-  let amt = parseFloat(amtStr);
-  if (isNaN(amt)) amt = 0;
-
-  // Additional: If you have a column like "Master Category" and it's "Payments" or "Credits", invert sign
-  if (row['Master Category'] && /payment|credit|refund/i.test(row['Master Category'])) {
-    amt = -Math.abs(amt);
-  }
-
-  return amt;
-}
-    function getDate(row) {
-      for (const key of Object.keys(row)) {
-        if (key.toLowerCase().includes('date')) return row[key];
-      }
-      return '';
-    }
-    function getDesc(row) {
-      for (const key of Object.keys(row)) {
-        if (key.toLowerCase().includes('desc') || key.toLowerCase().includes('payee') || key.toLowerCase().includes('merchant')) return row[key];
-      }
-      return '';
-    }
-    // --- Main Processing ---
-    let originalRows = [];
-    let mergedRows = [];
-    let categoryChart, trendChart;
-    let allCategories = new Set(), allPayees = new Set();
-
-    function processAndRender(rows) {
-      // Remove duplicates by Date+Description+Amount
-      const seen = new Set();
-      mergedRows = [];
-      allCategories.clear();
-      allPayees.clear();
-      for (const row of rows) {
-        const amount = guessAmount(row);
-        const date = getDate(row) || '';
-        const desc = getDesc(row) || '';
-        const category = categorize(desc);
-        const key = [date, desc, amount].join('|');
-        if (!seen.has(key)) {
-          seen.add(key);
-          mergedRows.push({...row, _amount: amount, _date: date, _desc: desc, _category: category});
-          if (category !== "Income") allCategories.add(category);
-          if (desc) allPayees.add(desc);
-        }
-      }
-      renderFilters();
-      renderEverything();
-    }
-
-    function filterRows() {
-      const cat = document.getElementById('categoryFilter').value;
-      const payee = document.getElementById('payeeFilter').value;
-      const start = document.getElementById('startDate').value;
-      const end = document.getElementById('endDate').value;
-      return mergedRows.filter(row => {
-        let ok = true;
-        if (cat && cat !== "All" && row._category !== cat) ok = false;
-        if (payee && payee !== "All" && row._desc !== payee) ok = false;
-        if (start) {
-          let d = new Date(row._date);
-          let ds = new Date(start);
-          if (!isNaN(d.getTime()) && d < ds) ok = false;
-        }
-        if (end) {
-          let d = new Date(row._date);
-          let de = new Date(end);
-          if (!isNaN(d.getTime()) && d > de) ok = false;
-        }
-        return ok;
-      });
-    }
-
-    function renderFilters() {
-      document.getElementById('filters').style.display = "flex";
-      // Category dropdown
-      const catSel = document.getElementById('categoryFilter');
-      catSel.innerHTML = '<option>All</option>' + Array.from(allCategories).sort().map(c => `<option>${c}</option>`).join('');
-      // Payee dropdown
-      const payeeSel = document.getElementById('payeeFilter');
-      payeeSel.innerHTML = '<option>All</option>' + Array.from(allPayees).sort().map(p => `<option>${p}</option>`).join('');
-      // Reset date pickers
-      document.getElementById('startDate').value = "";
-      document.getElementById('endDate').value = "";
-    }
-
-    function renderEverything() {
-      const rows = filterRows();
-      // Summary
-      let income = 0, expense = 0;
-      for (const row of rows) {
-        const amt = row._amount;
-        if (amt > 0) income += amt;
-        else if (amt < 0) expense += amt;
-      }
-      document.getElementById('summary').innerHTML = `
-        <span><b>Total Income:</b> $${income.toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2})}</span>
-        <span><b>Total Expenses:</b> $${Math.abs(expense).toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2})}</span>
-        <span><b>Net Cash Flow:</b> $${(income + expense).toLocaleString(undefined, {minimumFractionDigits:2, maximumFractionDigits:2})}</span>
-      `;
-      // Charts
-      // Pie - Category
-      const categoryTotals = {};
-      const monthlyTotals = {};
-      rows.forEach(row => {
-        const amt = row._amount;
-        if (amt < 0) {
-          // Pie: by category
-          categoryTotals[row._category] = (categoryTotals[row._category] || 0) + Math.abs(amt);
-          // Line: by month (YYYY-MM)
-          let d = new Date(row._date);
-          let month;
-          if (!isNaN(d.getTime())) {
-            month = `${d.getFullYear()}-${(d.getMonth()+1).toString().padStart(2, '0')}`;
-          } else {
-            month = (row._date || '').substring(0,7);
-          }
-          monthlyTotals[month] = (monthlyTotals[month] || 0) + Math.abs(amt);
-        }
-      });
-      const catLabels = Object.keys(categoryTotals);
-      const catData = Object.values(categoryTotals);
-      if (categoryChart) categoryChart.destroy();
-      categoryChart = new Chart(document.getElementById('categoryChart').getContext('2d'), {
-        type: 'pie',
-        data: {
-          labels: catLabels,
-          datasets: [{ data: catData, backgroundColor: [
-            "#4e79a7","#f28e2b","#e15759","#76b7b2","#59a14f","#edc949","#af7aa1","#ff9da7","#9c755f","#bab0ab"
-          ]}]
-        },
-        options: { plugins: { legend: { position: 'right' } } }
-      });
-      // Line - Monthly trend
-      const sortedMonths = Object.keys(monthlyTotals).sort();
-      const trendData = sortedMonths.map(m => monthlyTotals[m]);
-      if (trendChart) trendChart.destroy();
-      trendChart = new Chart(document.getElementById('trendChart').getContext('2d'), {
-        type: 'line',
-        data: {
-          labels: sortedMonths,
-          datasets: [{
-            label: 'Expenses',
-            data: trendData,
-            fill: false,
-            borderColor: '#e15759',
-            backgroundColor: '#e15759',
-            tension: 0.2
-          }]
-        },
-        options: { scales: { y: { beginAtZero: true } } }
-      });
-      // Table with editable category
-      const headers = Object.keys(rows[0] || {}).slice(0, 20);
-      let output = '<table><thead><tr>';
-      for (const header of headers) output += `<th>${header}</th>`;
-      output += '<th>Category (Edit)</th></tr></thead><tbody>';
-      for (let i = 0; i < rows.length; i++) {
-        const row = rows[i];
-        output += '<tr>';
-        for (const header of headers) output += `<td>${row[header] || ''}</td>`;
-        // Category select
-        output += `<td>
-          <select data-rowidx="${i}" class="cat-edit-select">
-            ${DEFAULT_CATEGORIES.map(cat => `<option value="${cat}"${row._category === cat ? " selected" : ""}>${cat}</option>`).join('')}
-          </select>
-        </td>`;
-        output += '</tr>';
-      }
-      output += '</tbody></table>';
-      document.getElementById('csv-table').innerHTML = output;
-      // Add event listeners to category dropdowns
-      document.querySelectorAll('.cat-edit-select').forEach(sel => {
-        sel.addEventListener('change', function(ev) {
-          const idx = parseInt(sel.getAttribute('data-rowidx'));
-          const newCat = sel.value;
-          const desc = rows[idx]._desc;
-          // Save to localStorage mapping
-          setCategoryForDesc(desc, newCat);
-          // Update all mergedRows with this desc
-          mergedRows.forEach(r => {
-            if (r._desc === desc) r._category = newCat;
-          });
-          // Update filters in case new category is introduced
-          allCategories.add(newCat);
-          renderFilters();
-          renderEverything();
-        });
-      });
-    }
-
-    // --- File Upload & Event Listeners ---
-    document.getElementById('csvFiles').addEventListener('change', function(event) {
-      const files = event.target.files;
-      if (!files.length) return;
-      let allRows = [];
-      let fileCount = 0;
-      let filesToParse = files.length;
-      for (let i = 0; i < files.length; i++) {
-        Papa.parse(files[i], {
-          header: true,
-          skipEmptyLines: true,
-          complete: function(results) {
-            allRows = allRows.concat(results.data.filter(row => Object.values(row).join('').trim() !== ''));
-            fileCount++;
-            if (fileCount === filesToParse) {
-              originalRows = allRows;
-              processAndRender(originalRows);
-            }
-          }
-        });
-      }
-    });
-
-    // Filter change events
-    document.getElementById('filters').addEventListener('change', renderEverything);
-    document.getElementById('resetFilters').addEventListener('click', function() {
-      renderFilters();
-      renderEverything();
-    });
-
-  </script>
+  <script type="module" src="main.js"></script>
 </body>
 </html>
