--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     </div>
   </div>
   <div id="csv-table"></div>
+  <div id="recurring-table"></div>
   <script type="module" src="main.js"></script>
 </body>
 </html>
